monitor-app-deploy/alert-manager-deploy/conf/03-alert-manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: alert-manager
  name: svc-alert-manager
  namespace: monitor-app
spec:
  ports:
    - port: 9093
      name: alert-manager
  selector:
    app: alert-manager
