monitor-app-deploy/alert-manager-deploy/conf/04-alert-manager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-alert-manager
  namespace: monitor-app
  labels:
    app: alert-manager
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx-private
  tls:
    - hosts:
        - alert-manager.internal.d7z.net
      secretName: tls-pri-d7z
  rules:
    - host: alert-manager.internal.d7z.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-alert-manager
                port:
                  name: alert-manager
